<resources>
    <string name="app_name">Note</string>
    <string name="homeEmptyState">هیچ خبری اینجا نیست!</string>
    <string name="dummyText">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
    </string>
    <string name="title_delete_dialog">آیا میخواهید یادداشت را حذف کنید؟</string>
    <string name="title_back_dialog">تغییرات ذخیره شود؟</string>
    <string name="saveChanges">تغییرات ذخیره شود؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="choiceBackgroundColor">انتخاب رنگ پس زمینه</string>
    <string name="monthText">بهمن</string>
    <string name="dayText">۲۸</string>
    <string name="weekNameText">ج</string>
    <string name="deleteNoteText">آیا می‌خواهید این یادداشت را حذف کنید؟</string>
    <string name="emptyStateText">هیچ یادداشتی وجود ندارد!</string>
    <string name="filterLevelOne">تاریخ ایجاد(جدیدترین)</string>
    <string name="filterLevelTwo">تاریخ ایجاد(قدیمی‌ترین)</string>
    <string name="filterLevelThree">مرتب کردن بر اساس رنگ</string>
    <string name="appTitle">لیست یادداشت‌ها</string>
    <string name="searchHintText">جستجوی یادداشت</string>
    <string name="noteToolbarTitle">ایجاد یادداشت</string>
    <string name="noteEditTextHintTitle">یادداشت کنید...</string>
    <string name="alarmTitle">تنظیم تاریخ و ساعت</string>
    <string name="alarmYearText">۱۴۰۰</string>
    <string name="deleteAlarmText">حذف آلارم</string>
    <string name="createAlarmText">ایجاد آلارم</string>
    <string name="createNoteText">ذخیره</string>
    <string name="showMarkDownNoteText">نمایش</string>

    <string name="createLock">رمز جدید را وارد کنید</string>
    <string name="preChangeLock">رمز قبلی را وارد کنید</string>
    <string name="accessLock">رمز ورود را وارد کنید</string>
    <string name="changeLockBottomSheet">تغییر رمز</string>
    <string name="LockBottomSheet">قفل کردن یادداشت</string>
    <string name="removeLock">برای حذف قفل رمز را وارد کنید</string>
    <string name="removeLockedNote">برای حذف یادداشت رمز را وارد کنید</string>
    
    
    <string name="camera_permission_required">آیا مجوز استفاده از دوربین برای این برنامه را میدهید؟</string>
    <string name="camera_permission_granted">مجوز ارسال شد. میتوانید از دوربین استفاده کنید.</string>


    
</resources>