<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="75dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">



    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:background="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:text="@string/monthText"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:text="@string/dayText"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#464646"/>

        <TextView
            android:id="@+id/tv_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:text="@string/weekNameText"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>