<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteNoteText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/btn_ok_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textColor="@color/gray_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_dialog"
        />

    <TextView
        android:id="@+id/btn_cancel_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/no"
        android:textStyle="bold"
        android:textColor="@color/gray_black"
        app:layout_constraintEnd_toStartOf="@id/btn_ok_delete_dialog"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_dialog"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ok_delete_dialog"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>