<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_bottom_sheet_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/rounded_bottom_sheet_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alarmTitle"
            android:textColor="#F1F1F1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_year_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/alarmYearText"
            android:textColor="#F1F1F1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_reminder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_year_reminder" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_date_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    

   <TimePicker
       android:id="@+id/layout_time_picker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:timePickerMode="spinner"
       android:layout_marginTop="8dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/layout_date_picker"/>

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_time_picker"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end"
        android:padding="16dp">

        <TextView
            android:id="@+id/remove_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteAlarmText"
            android:textStyle="bold"
            android:layout_marginEnd="30dp"
            android:textColor="@color/gray_black"/>

        <TextView
            android:id="@+id/make_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAlarmText"
            android:textStyle="bold"
            android:layout_marginEnd="12dp"
            android:textColor="@color/gray_black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>