<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_filter1"
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="end|center_vertical"/>

        <TextView
            android:id="@+id/sortByDateLatest"
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:gravity="start|center_vertical"
            android:text="@string/filterLevelOne"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <RadioButton
            android:id="@+id/radio_filter2"
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="end|center_vertical"/>

        <TextView
            android:id="@+id/sortByDateOldest"
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:gravity="start|center_vertical"
            android:text="@string/filterLevelTwo"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l2">

        <RadioButton
            android:id="@+id/radio_filter3"
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="end|center_vertical"/>

        <TextView
            android:id="@+id/sortByColor"
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:gravity="start|center_vertical"
            android:text="@string/filterLevelThree"
            android:textColor="@color/gray_black"
            android:textSize="16sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>